--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Link de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- Link Css -->
-    <link rel="stylesheet" href="/CSS/codigo.css">
+    <link rel="stylesheet" href="./CSS/codigo.css">
     <title>Distribuidora Liliana</title>
 </head>
 <body>
@@ -27,9 +27,9 @@
     <!-- div contenedor modal -->
     <div id="modalContainer" class="modalContainer"></div>
     
-    <script src="/Javascript/menu.js"></script>
-    <script src="/Javascript/app.js"></script>
-    <script src="/Javascript/carrito.js"></script>
+    <script src="./Javascript/menu.js"></script>
+    <script src="./Javascript/app.js"></script>
+    <script src="./Javascript/carrito.js"></script>
 
     
 </body>
